updated 1st phase

--- a/app1.ipynb
+++ b/app1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "[5552 rows x 9 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -292,12 +292,10 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mThought: To determine the number of rows in the dataframe, I can use the `shape` attribute of the dataframe. The `shape` attribute returns a tuple representing the dimensions of the dataframe, where the first element is the number of rows.\n",
-      "\n",
+      "\u001b[32;1m\u001b[1;3mThought: To determine the number of rows in the dataframe, I can use the `shape` attribute of the dataframe.\n",
       "Action: python_repl_ast\n",
-      "Action Input: df.shape[0]\u001b[0m\u001b[36;1m\u001b[1;3m55\u001b[0m\u001b[32;1m\u001b[1;3mThere are 55 rows in the dataframe.\n",
-      "\n",
-      "Final Answer: 55\u001b[0m\n",
+      "Action Input: df.shape[0]\u001b[0m\u001b[36;1m\u001b[1;3m5552\u001b[0m\u001b[32;1m\u001b[1;3mI now know the final answer\n",
+      "Final Answer: There are 5552 rows in the dataframe.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -305,10 +303,11 @@
     {
      "data": {
       "text/plain": [
-       "{'input': 'How many rows are there?', 'output': '55'}"
+       "{'input': 'How many rows are there?',\n",
+       " 'output': 'There are 5552 rows in the dataframe.'}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
