--- a/app1.ipynb
+++ b/app1.ipynb
@@ -2,319 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "from langchain_experimental.agents.agent_toolkits import create_csv_agent\n",
     "from langchain_openai import ChatOpenAI\n",
     "from dotenv import load_dotenv\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import os\n",
+    "\n",
     "load_dotenv()\n",
     "\n",
     "OPENAI_KEY = os.environ['OPENAI_KEY']\n",
     "\n",
-    "llm = ChatOpenAI(api_key=OPENAI_KEY,temperature= 0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "llm = ChatOpenAI(api_key=OPENAI_KEY,temperature= 0.5)\n",
+    "\n",
     "df = pd.read_excel('/Users/jayasri/Downloads/PCIT Data v3.0.1.xlsx')\n",
-    "df.to_csv(\"test_file.csv\",index= False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Region</th>\n",
-       "      <th>Archetype</th>\n",
-       "      <th>Sub-archetype</th>\n",
-       "      <th>Investment Category</th>\n",
-       "      <th>Deal Type</th>\n",
-       "      <th>Deal Value</th>\n",
-       "      <th>Deal Date</th>\n",
-       "      <th>Deal Year</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Philippines</td>\n",
-       "      <td>Asia</td>\n",
-       "      <td>Refill/Reuse</td>\n",
-       "      <td>Refill/Reuse</td>\n",
-       "      <td>Accelerator/Incubator Investments</td>\n",
-       "      <td>Grant</td>\n",
-       "      <td>8799.3</td>\n",
-       "      <td>2022-09-11</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Sweden</td>\n",
-       "      <td>Europe</td>\n",
-       "      <td>Recycling</td>\n",
-       "      <td>Reverse vending machines</td>\n",
-       "      <td>Venture Capital</td>\n",
-       "      <td>Seed Round</td>\n",
-       "      <td>380000</td>\n",
-       "      <td>2020-12-31</td>\n",
-       "      <td>2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Sweden</td>\n",
-       "      <td>Europe</td>\n",
-       "      <td>Recycling</td>\n",
-       "      <td>Reverse vending machines</td>\n",
-       "      <td>Venture Capital</td>\n",
-       "      <td>Early Stage VC</td>\n",
-       "      <td>1760000</td>\n",
-       "      <td>2021-04-30</td>\n",
-       "      <td>2021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Sweden</td>\n",
-       "      <td>Europe</td>\n",
-       "      <td>Recycling</td>\n",
-       "      <td>Reverse vending machines</td>\n",
-       "      <td>Venture Capital</td>\n",
-       "      <td>Early Stage VC</td>\n",
-       "      <td>Undisclosed</td>\n",
-       "      <td>2022-06-20</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Sweden</td>\n",
-       "      <td>Europe</td>\n",
-       "      <td>Recycling</td>\n",
-       "      <td>Reverse vending machines</td>\n",
-       "      <td>Corporate Investments</td>\n",
-       "      <td>Merger/Acquisition</td>\n",
-       "      <td>Undisclosed</td>\n",
-       "      <td>2023-08-22</td>\n",
-       "      <td>2023</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5547</th>\n",
-       "      <td>India</td>\n",
-       "      <td>Asia</td>\n",
-       "      <td>Recycling</td>\n",
-       "      <td>Collection for recycling</td>\n",
-       "      <td>Accelerator/Incubator Investments</td>\n",
-       "      <td>Grant</td>\n",
-       "      <td>Undisclosed</td>\n",
-       "      <td>2023-12-15</td>\n",
-       "      <td>2023</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5548</th>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>Latin America And The Caribbean</td>\n",
-       "      <td>Recovery</td>\n",
-       "      <td>Waste management</td>\n",
-       "      <td>Accelerator/Incubator Investments</td>\n",
-       "      <td>Grant</td>\n",
-       "      <td>Undisclosed</td>\n",
-       "      <td>2023-06-21</td>\n",
-       "      <td>2023</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5549</th>\n",
-       "      <td>India</td>\n",
-       "      <td>Asia</td>\n",
-       "      <td>Recycling</td>\n",
-       "      <td>Sorting technology</td>\n",
-       "      <td>Accelerator/Incubator Investments</td>\n",
-       "      <td>Grant</td>\n",
-       "      <td>Undisclosed</td>\n",
-       "      <td>2023-03-17</td>\n",
-       "      <td>2023</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5550</th>\n",
-       "      <td>United States</td>\n",
-       "      <td>North America</td>\n",
-       "      <td>Operational Platforms</td>\n",
-       "      <td>Digital platform</td>\n",
-       "      <td>Accelerator/Incubator Investments</td>\n",
-       "      <td>Grant</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>2023-08-08</td>\n",
-       "      <td>2023</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5551</th>\n",
-       "      <td>Switzerland</td>\n",
-       "      <td>Europe</td>\n",
-       "      <td>Materials</td>\n",
-       "      <td>Bio-based, Biodegradable</td>\n",
-       "      <td>Accelerator/Incubator Investments</td>\n",
-       "      <td>Award/Prize</td>\n",
-       "      <td>26890</td>\n",
-       "      <td>2023-06-21</td>\n",
-       "      <td>2023</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5552 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Country                           Region              Archetype  \\\n",
-       "0       Philippines                             Asia           Refill/Reuse   \n",
-       "1            Sweden                           Europe              Recycling   \n",
-       "2            Sweden                           Europe              Recycling   \n",
-       "3            Sweden                           Europe              Recycling   \n",
-       "4            Sweden                           Europe              Recycling   \n",
-       "...             ...                              ...                    ...   \n",
-       "5547          India                             Asia              Recycling   \n",
-       "5548         Brazil  Latin America And The Caribbean               Recovery   \n",
-       "5549          India                             Asia              Recycling   \n",
-       "5550  United States                    North America  Operational Platforms   \n",
-       "5551    Switzerland                           Europe              Materials   \n",
-       "\n",
-       "                 Sub-archetype                Investment Category  \\\n",
-       "0                 Refill/Reuse  Accelerator/Incubator Investments   \n",
-       "1     Reverse vending machines                    Venture Capital   \n",
-       "2     Reverse vending machines                    Venture Capital   \n",
-       "3     Reverse vending machines                    Venture Capital   \n",
-       "4     Reverse vending machines              Corporate Investments   \n",
-       "...                        ...                                ...   \n",
-       "5547  Collection for recycling  Accelerator/Incubator Investments   \n",
-       "5548          Waste management  Accelerator/Incubator Investments   \n",
-       "5549        Sorting technology  Accelerator/Incubator Investments   \n",
-       "5550          Digital platform  Accelerator/Incubator Investments   \n",
-       "5551  Bio-based, Biodegradable  Accelerator/Incubator Investments   \n",
-       "\n",
-       "               Deal Type  Deal Value   Deal Date  Deal Year  \n",
-       "0                  Grant       8799.3 2022-09-11       2022  \n",
-       "1             Seed Round       380000 2020-12-31       2020  \n",
-       "2         Early Stage VC      1760000 2021-04-30       2021  \n",
-       "3         Early Stage VC  Undisclosed 2022-06-20       2022  \n",
-       "4     Merger/Acquisition  Undisclosed 2023-08-22       2023  \n",
-       "...                  ...          ...        ...        ...  \n",
-       "5547               Grant  Undisclosed 2023-12-15       2023  \n",
-       "5548               Grant  Undisclosed 2023-06-21       2023  \n",
-       "5549               Grant  Undisclosed 2023-03-17       2023  \n",
-       "5550               Grant         5000 2023-08-08       2023  \n",
-       "5551         Award/Prize        26890 2023-06-21       2023  \n",
-       "\n",
-       "[5552 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agent_executer  = create_csv_agent(llm,'test_file.csv',verbose = True,allow_dangerous_code=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mThought: To determine the number of rows in the dataframe, I can use the `shape` attribute of the dataframe.\n",
-      "Action: python_repl_ast\n",
-      "Action Input: df.shape[0]\u001b[0m\u001b[36;1m\u001b[1;3m5552\u001b[0m\u001b[32;1m\u001b[1;3mI now know the final answer\n",
-      "Final Answer: There are 5552 rows in the dataframe.\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'input': 'How many rows are there?',\n",
-       " 'output': 'There are 5552 rows in the dataframe.'}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "df.to_csv(\"test_file.csv\",index= False)\n",
+    "\n",
+    "\n",
+    "agent_executer  = create_csv_agent(llm,'test_file.csv',verbose = True,allow_dangerous_code=True)\n",
+    "\n",
     "agent_executer.invoke(\"How many rows are there?\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
