--- a/test.ipynb
+++ b/test.ipynb
@@ -61,7 +61,7 @@
     "llm = ChatOpenAI(api_key=OPENAI_KEY, temperature=0)\n",
     "\n",
     "# Create a SQLAlchemy engine\n",
-    "engine = create_engine('mysql+pymysql://root:root@127.0.0.1:8889/mydatabase')\n",
+    "engine = create_engine(os.getenv('DB_CONN_STRING'))\n",
     "\n",
     "# Wrap the engine with SQLDatabase\n",
     "db = SQLDatabase(engine)\n",
